# words-api-client-python-sdk

./: README.md  pyproject.toml  requirements.txt
doc/: client.md
doc/auth/: custom-header-signature.md
doc/controllers/: ap-is.md
doc/models/: definitions-response.md  examples-response.md  frequency-details.md  frequency-response.md  pronunciation-details.md  pronunciation-response.md  syllable-details.md  synonyms-response.md  word-details.md  word-response.md
tests/: http_response_catcher.py
tests/controllers/: controller_test_base.py  test_ap_is_controller.py
wordsapi/: __init__.py  api_helper.py  configuration.py  wordsapi_client.py
wordsapi/controllers/: __init__.py  ap_is_controller.py  base_controller.py
wordsapi/exceptions/: api_exception.py
wordsapi/http/: http_call_back.py  http_method_enum.py  http_request.py  http_response.py
wordsapi/http/auth/: __init__.py  custom_header_authentication.py
wordsapi/models/: __init__.py  definitions_response.py  examples_response.py  frequency_details.py  frequency_response.py  pronunciation_details.py  pronunciation_response.py  syllable_details.py  synonyms_response.py  word_details.py  word_response.py
wordsapi/utilities/: file_wrapper.py
