[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "words-api-client-sdk"
description = "words-api-client sdk"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = []
authors = [{name = "Sufyan", email = "muhammad.sufyan@apimatic.io"}]
urls = {Documentation = "https://www.apimatic.io"}
dependencies = ["apimatic-core~=0.2.0", "apimatic-core-interfaces~=0.1.0", "apimatic-requests-client-adapter~=0.1.0"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
